showing on mobile fixed

--- a/pages/dashboard/styles/dashboard.css
+++ b/pages/dashboard/styles/dashboard.css
@@ -408,7 +408,6 @@ label, .download-text {
 
     .gen-qr img {
         width: 70%;
-        mix-blend-mode: color-burn;
     }
 
     .download {
